---------------------------------------------------------------------------
Version 4.5.4  [v4-beta] (rgerhards), 2009-09-??
- bugfix: potential race in object loader (obj.c) during use/release
  of object interface
- bugfixes: potential problems in out file zip writer. Problems could
  lead to abort and/or memory leak. The module is now hardened in a very
  conservative way, which is sub-optimal from a performance point of view.
  This should be improved if it has proven reliable in practice.
---------------------------------------------------------------------------
Version 4.5.3  [v4-beta] (rgerhards), 2009-09-17
- bugfix: repeated messages were incorrectly processed
  this could lead to loss of the repeated message content. As a side-
  effect, it could probably also be possible that some segfault occurs
  (quite unlikely). The root cause was that some counters introduced
  during the malloc optimizations were not properly duplicated in
  MsgDup(). Note that repeated message processing is not enabled
  by default.
- bugfix: message sanitation had some issues:
  - control character DEL was not properly escaped
  - NUL and LF characters were not properly stripped if no control
    character replacement was to be done
  - NUL characters in the message body were silently dropped (this was
    a regeression introduced by some of the recent optimizations)
- bugfix: strings improperly reused, resulting in some message properties
  be populated with strings from previous messages. This was caused by
  an improper predicate check. [backported from v5]
- fixed some minor portability issues
- bugfix: reverse lookup reduction logic in imudp do DNS queries too often
  [imported from 4.4.2]
---------------------------------------------------------------------------
Version 4.5.2  [v4-beta] (rgerhards), 2009-08-21
- legacy syslog parser changed so that it now accepts date stamps in
  wrong case. Some devices seem to create them and I do not see any harm
  in supporting that.